--- a/projects/ngx-grid-core/src/lib/data-grid-common-styles.scss
+++ b/projects/ngx-grid-core/src/lib/data-grid-common-styles.scss
@@ -1,3 +1,14 @@
+.has-groups, :host.has-groups {
+
+  .row {
+    ::ng-deep {
+      .row-thumb {
+        width: 54px;
+      }
+    }
+  }
+}
+
 .row {
   position: relative;
   display: block;
@@ -27,7 +38,7 @@
         left: -0.5px;
         bottom: -0.5px;
         pointer-events: none;
-        background-color: var(--highlight-color);
+        background-color: var(--highlight-color-10);
         border-right: 2px solid var(--primary-color-vivid);
       }
     }
@@ -35,28 +46,8 @@
 
   ::ng-deep {
     .col-selected {
-      background-color: var(--highlight-color);
+      background-color: var(--highlight-color-10);
       border-bottom: 2px solid var(--primary-color-vivid);
-    }
-  }
-
-  &.level-1 {
-    ::ng-deep {
-
-      .row-thumb+.cell,
-      lib-row-floating-title {
-        padding-left: 15px;
-      }
-    }
-  }
-
-  &.level-2 {
-    ::ng-deep {
-
-      .row-thumb+.cell,
-      lib-row-floating-title {
-        padding-left: 30px;
-      }
     }
   }
 
@@ -70,12 +61,9 @@
       left: 0;
       bottom: 0;
       right: 0;
-      background-color: var(--purple-comp);
+      background-color: var(--app-bg-contrasted);
       pointer-events: none;
-    }
-
-    &.level-2:before {
-      opacity: 0.4;
+      opacity: 0.06;
     }
 
     ::ng-deep {
@@ -85,12 +73,27 @@
         }
       }
 
-      .cell {
+      .cell:not(.row-thumb) {
         border-right-color: transparent;
       }
     }
   }
 
+}
+
+.row-thumb,
+.row.header .cell {
+  &:before {
+    content: " ";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: var(--app-bg-contrasted);
+    z-index: -1;
+    opacity: 0.102;
+  }
 }
 
 .cell {
@@ -217,7 +220,7 @@
 
   &.hide-value {
     ::ng-deep {
-      > * {
+      >* {
         opacity: 0;
         pointer-events: none;
       }
