--- a/projects/ngx-grid-core/src/lib/ui/data-grid/data-grid.component.html
+++ b/projects/ngx-grid-core/src/lib/ui/data-grid/data-grid.component.html
@@ -1,4 +1,8 @@
-<div class="row-thumb"></div>
+<div class="row-thumb" #rowThumb>
+  <div class="action" (click)="a.onClick()" *ngFor="let a of cornerActions | async" [title]="a.tooltip | async">
+    <mat-icon [svgIcon]="(a.icon | async) ?? ''"></mat-icon>
+  </div>
+</div>
 <div class="grid" [ngClass]="{ Disabled: disabled === true, initialised: initialised }">
   <data-grid-header></data-grid-header>
   <data-grid-body tabindex="0" [name]="name"></data-grid-body>
