--- a/projects/ngx-grid-core/src/lib/ui/data-grid/data-grid.component.scss
+++ b/projects/ngx-grid-core/src/lib/ui/data-grid/data-grid.component.scss
@@ -1,20 +1,21 @@
-::ng-deep { 
+::ng-deep {
   .cdk-drag-preview {
     box-sizing: border-box;
     border-radius: 4px;
-    box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.25);
+    box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.25);
   }
 
-  .cdk-drag-placeholder > *:not(data-grid-separator) {
+  .cdk-drag-placeholder>*:not(data-grid-separator) {
     opacity: 0.2 !important;
   }
 
   .cdk-drag-animating,
-  [cdkDropList].cdk-drop-list-dragging > *:not(.cdk-drag-placeholder) {
+  [cdkDropList].cdk-drop-list-dragging>*:not(.cdk-drag-placeholder) {
     transition: transform 100ms cubic-bezier(0, 0, 0.2, 1);
   }
 
-  button, input {
+  button,
+  input {
     font: 400 14px / 20px Roboto, "Helvetica Neue", sans-serif;
     outline: none;
   }
@@ -44,7 +45,7 @@
     width: 100%;
     position: relative;
   }
-  
+
   @keyframes dot-keyframes {
     0% {
       opacity: .4;
@@ -68,6 +69,7 @@
     align-items: center;
     display: flex;
     padding: 0px 2px;
+
     div {
       animation: dot-keyframes 1.5s infinite ease-in-out;
       background-color: currentColor;
@@ -76,11 +78,11 @@
       height: 6px;
       width: 6px;
       margin-right: 2px;
-      
+
       &:nth-child(2) {
         animation-delay: .5s;
       }
-      
+
       &:nth-child(3) {
         animation-delay: 1s;
         margin-right: 0px;
@@ -90,10 +92,11 @@
 
 }
 
-:host {  
+:host {
   ::ng-deep {
     @import "../cell/cell-types/styles/cell-type-styles";
   }
+
   display: block;
   position: absolute;
   top: 0;
@@ -105,15 +108,17 @@
   grid-template-rows: 1fr;
   border-top: 1px solid var(--divider-color);
   border-left: 1px solid var(--divider-color);
+
   &.ctrl-or-shift-modifier {
     ::ng-deep {
-      .cell > * {
+      .cell>* {
         pointer-events: none;
       }
     }
   }
+
   &.Disabled {
-    pointer-events: none!important;
+    pointer-events: none !important;
   }
 }
 
@@ -127,6 +132,42 @@
   top: 0;
   left: 0;
   z-index: 10;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+
+  &.has-groups {
+    width: 54px;
+  }
+
+  &:before {
+    content: " ";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: var(--app-bg-contrasted);
+    z-index: -1;
+    opacity: 0.102;
+  }
+
+  .action,
+  .mat-icon {
+    width: 14px;
+    height: 14px;
+  }
+
+  .action {
+    color: var(--divider-color);
+    cursor: pointer;
+    margin-left: 7px;
+
+    &:hover {
+      opacity: 0.6;
+      color: var(--text-color);
+    }
+  }
 }
 
 .grid {
@@ -136,9 +177,11 @@
   overflow: hidden;
   opacity: 0;
   transition: opacity ease-out 250ms;
+
   &.initialised {
     opacity: 1;
   }
+
   &.SelectMode {
     ::ng-deep {
       .cell {
@@ -148,10 +191,12 @@
             cursor: pointer;
           }
         }
-        > * {
+
+        >* {
           pointer-events: none;
         }
       }
+
       data-grid-body {
         .row:hover {
           background-color: var(--highlight-color-10);
@@ -187,6 +232,7 @@ data-grid-body:focus {
     0% {
       background-position: 0 0, 0 100%, 0 0, 100% 0;
     }
+
     100% {
       background-position: 2 * $ant-size 0, -2 * $ant-size 100%, 0 -2 * $ant-size, 100% 2 * $ant-size;
     }
@@ -199,7 +245,7 @@ data-grid-body:focus {
   .cdk-overlay-pane.grid-overlay.Centered {
     align-items: center;
   }
-  
+
   .file-dropzone {
     @include marching-ants-init(8px, 1px, 2s, 1);
     @include marching-ants-color(var(--primary-color-themed), transparent);
@@ -212,6 +258,7 @@ data-grid-body:focus {
     z-index: 1;
     background-color: var(--highlight-color);
     backdrop-filter: blur(5px);
+
     &:before {
       content: " ";
       position: absolute;
@@ -224,6 +271,7 @@ data-grid-body:focus {
       opacity: 0;
       transition: opacity 100ms linear;
     }
+
     &:after {
       content: "drop-zone";
       position: absolute;
