--- a/projects/ngx-grid-core/src/lib/ui/row/row.component.scss
+++ b/projects/ngx-grid-core/src/lib/ui/row/row.component.scss
@@ -1,21 +1,49 @@
 ::ng-deep {
+
+  .title-icon {
+    color: var(--text-color);
+    position: absolute;
+    left: 8px;
+    width: 14px;
+    height: 14px;
+    top: 5px;
+    box-sizing: border-box;
+    border: 1px solid var(--divider-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    transition: opacity 0.1s ease-in-out;
+
+    svg {  
+      width: 6px;
+      height: 6px;
+      opacity: 0.6;
+    }
+    
+    &:hover {
+      opacity: 1;
+    }
+  }
+  
   .row-floating-title {
     position: absolute;
     top: 0;
-    left: 22px;
+    left: 32px;
     bottom: 1px;
     display: flex;
     align-items: center;
     z-index: 3;
-    padding: 0px 15px 0px 0px;
+    padding: 0px 15px 0px 6px;
+    margin-left: 22px;
     cursor: pointer;
     white-space: nowrap;
     box-sizing: border-box;
-  
+
     .txt {
       white-space: nowrap;
     }
-  
+
     .hover {
       position: absolute;
       top: 0;
@@ -25,11 +53,66 @@
       z-index: 0;
       pointer-events: none;
     }
-  
+
     &:hover {
       .hover {
         background: var(--primary-color-10);
       }
     }
   }
+}
+
+.row-thumb {
+  &.cell {
+    border-bottom: none;
+  }
+
+  .wrapper {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: flex-end;
+
+    .main {
+      width: 22px;
+      height: 24px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-bottom: 1px solid var(--divider-color);
+    }
+  }
+
+  .level-line {
+    position: absolute;
+    left: 12px;
+    top: 0px;
+    width: 1px;
+    background-color: var(--divider-color);
+    height: 25px;    
+
+    &.last {
+      height: 12.5px
+    }
+
+    &.first {
+      top: -6px;
+      height: 31px;
+    }
+
+    &.last.first {
+      height: 19px;   
+    }
+  }
+
+  .level-cap {
+    position: absolute;
+    height: 1px;
+    background-color: var(--divider-color);
+    width: 5px;
+    left: 13px;
+    top: 11.5px;
+  }
+
 }
