Grid filtering changes and bugfixes (#30)
* Added overloads to getFormatedValueOperation to accept cell coordinates or a column as the first argument
* Added method on grid controller to get the default date format
* Added an internal property to TransformPipeline to track transforms and exposed hasTransform() to check if the transform is already a part of the pipeline
* Fixed the filterRowsOperation so it actually works with the row transform pipeline and it filters on formatted values now
* Changed GridSelectionRange to accept grid controller instead of grid events in its constructor
* Added a method to grid data source to upsert rows for handling delta changes
* Added dropdownMenu parameters to IGridColumnInterface and implementation
* Fixed a bug in the body component where records would not show if they were provided before the component was initialized
* Optimized cell component detectChanges() to only receive the value into the cell type if it is different from the currrent value
* Now cloning the original data source in SingleSelectGridDropdownOverlayComponent as we need the row pipeline to be distinct
* Added grid dropdown menu to the HeaderComponent

--- a/projects/ngx-grid-core/src/lib/ui/header/header.component.html
+++ b/projects/ngx-grid-core/src/lib/ui/header/header.component.html
@@ -12,10 +12,22 @@
     *ngFor="let column of (columns | async); let index = index"
     [style.width] = "((columnWidths | async)?.[column.columnKey] ?? '') + 'px'"
     class="cell display">
-    <app-resizer (output)="resizeColumn($event.x, column)" (resizeStart)="startResize()"
-      (resizeEnd)="endResize()" (mouseenter)="disableDrag()" (mouseleave)="enableDrag()"></app-resizer>
-    <span class="material-symbols-outlined sort-icon" *ngIf="columnHasSort(column)">{{ columnSortIconKey(column) }}</span>
-    <data-grid-separator *ngFor="let s of separators(column.columnKey)" Axis="y" [separator]="s"></data-grid-separator>
-    <div class="text-readonly"><lib-localized-text>{{ column.name ?? column.columnKey }}</lib-localized-text></div>
-    </div>
+      <app-resizer (output)="resizeColumn($event.x, column)" (resizeStart)="startResize()"
+        (resizeEnd)="endResize()" (mouseenter)="disableDrag()" (mouseleave)="enableDrag()"></app-resizer>
+      <span class="material-symbols-outlined sort-icon" *ngIf="columnHasSort(column)">{{ columnSortIconKey(column) }}</span>
+      <data-grid-separator *ngFor="let s of separators(column.columnKey)" Axis="y" [separator]="s"></data-grid-separator>
+      <div class="text-readonly"><lib-localized-text>{{ column.name ?? column.columnKey }}</lib-localized-text></div>
+      <button mat-icon-button class="col-dropdown-btn" *ngIf="column.dropdownMenu"
+        (mousedown)="$event.stopPropagation()"
+        (click)="$event.stopPropagation(); openMenu(column)"
+        [matMenuTriggerFor]="columnMenu"
+        #columnMenuTrigger="matMenuTrigger"
+        (menuClosed)="columnMenuContainerRef?.clear()"
+        [ngClass]="{ keepIconVisible: (column.dropdownMenu.iconVisibility | async) === iconVisibility.Always }">
+          <mat-icon [ngClass]="{thinLine: isThinlineIcon(column.dropdownMenu.icon | async)}" [svgIcon]="(column.dropdownMenu.icon | async) ?? ''"></mat-icon>
+      </button>
+  </div>
+  <mat-menu #columnMenu="matMenu" [hasBackdrop]="false" class="column-menu">
+    <ng-template #columnMenuTemplate></ng-template>
+  </mat-menu>
 </div>
