Add support for value localizatio + several bugfixes and refactorings

--- a/projects/ngx-grid-core/src/lib/ui/grid-overlays/multi-select-foreign-key-dropdown-overlay/multi-select-foreign-key-dropdown-overlay.component.html
+++ b/projects/ngx-grid-core/src/lib/ui/grid-overlays/multi-select-foreign-key-dropdown-overlay/multi-select-foreign-key-dropdown-overlay.component.html
@@ -10,7 +10,7 @@
     </div>
     <lib-loading-dots [showText]="true" *ngIf="(loadingState | async) === LoadingState.Loading"></lib-loading-dots>
     <div class="grid" *ngIf="dataSource && (loadingState | async) === LoadingState.Idle">
-      <data-grid-record-selector #selector [source]="dataSource" (selected)="rowSelected($event)" [filterString]="searchCtrl.value" [selectedRows]="values"></data-grid-record-selector>
+      <data-grid-record-selector #selector [source]="dataSource" (selected)="rowSelected($event)" [selectedRows]="values"></data-grid-record-selector>
     </div>
   </div>
 </app-floating-window>
