--- a/projects/ngx-grid-core/src/lib/ui/cell/cell.component.html
+++ b/projects/ngx-grid-core/src/lib/ui/cell/cell.component.html
@@ -1,1 +1,3 @@
 <div class="is-required-asterix">*</div>
+<div class="app-bg"></div> <!-- app background color -->
+<div class="backdrop"></div> <!-- for painting the cell background -->
