--- a/projects/ngx-grid-core/src/lib/ui/header/header.component.scss
+++ b/projects/ngx-grid-core/src/lib/ui/header/header.component.scss
@@ -1,7 +1,6 @@
 :host {
   width: 100%;
-  overflow: visible;
-  margin-right: -9999999px;
+  overflow: hidden;
   position: relative;
   z-index: 1;
 
